<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="Systemparameter" Id="{2b7e68ef-f113-4809-903c-9cd92fcb2e25}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Systemparameter
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Lesen
	// Objektzustände
	GVL.Robot_State 		:= Anlage.UR5.P_State;
	GVL.Greifer_State 		:= Anlage.Gripper.P_State;
	GVL.Sensor_State 		:= 1;

// Zuweisen
	// Eigenschaften	
	
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>